# PDSEC25-artifacts

./: .gitignore  README.md  matplotlib-style.rc  pyproject.toml  snakefile
results/C1/1143904/: likwid_perfctr_node002_0.txt  likwid_perfctr_node004_24.txt  likwid_perfctr_node011_48.txt  likwid_perfctr_node012_72.txt  likwid_perfctr_node013_96.txt  likwid_perfctr_node014_120.txt  likwid_perfctr_node016_144.txt  likwid_perfctr_node017_168.txt  likwid_perfctr_node018_192.txt  likwid_perfctr_node019_216.txt  likwid_perfctr_node022_240.txt  likwid_perfctr_node023_264.txt  likwid_perfctr_node025_288.txt  likwid_perfctr_node031_312.txt  likwid_perfctr_node033_336.txt  likwid_perfctr_node034_360.txt  meta.yaml  output_1143904.err  output_1143904.out  results.csv
results/C1/1143905/: likwid_perfctr_node002_0.txt  likwid_perfctr_node004_24.txt  likwid_perfctr_node011_48.txt  likwid_perfctr_node012_72.txt  likwid_perfctr_node013_96.txt  likwid_perfctr_node014_120.txt  likwid_perfctr_node016_144.txt  likwid_perfctr_node017_168.txt  likwid_perfctr_node018_192.txt  likwid_perfctr_node019_216.txt  meta.yaml  results.csv  (+8 more)
scripts/: exp-to-csv.py  plot-case.py  plot-case_old.py  table-EE.py
scripts/old/: filter_likwid.sh  list_fli.py  plot-FLIfluid.py  plot-FLIpart.py  plot-FreqAnalysis.py
scripts/tools/: energy.py  internal.py  list-all-experiments.py  misc.py  profile.py  scorep.py
setup/C1/: run_experiment.sh
setup/C2/: config.xml  experiment.job  run_experiment.sh
setup/C3/: run_experiment.sh
setup/C3-2/: run_experiment.sh
setup/C4/: experiment.job  run_experiment.sh
(+1990 files in other folders)
